--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -8,8 +8,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="Cache-control" content="NO-STORE">
     <meta name="robots" content="noindex, nofollow">
-    <meta name="mobile-web-app-capable" content="yes">
     <title>City of Heroes - Codex</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="icon" sizes="72x72" href="../images/icons/icon-72x72.png">
     <link rel="icon" sizes="96x96" href="../images/icons/icon-96x96.png">
     <link rel="icon" sizes="128x128" href="../images/icons/icon-128x128.png">
@@ -18,6 +18,7 @@
     <link rel="icon" sizes="192x192" href="../images/icons/icon-192x192.png">
     <link rel="icon" sizes="384x384" href="../images/icons/icon-384x384.png">
     <link rel="icon" sizes="512x512" href="../images/icons/icon-512x512.png">
+    <link rel="stylesheet" type="text/css" href="../codex.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <script src="enhance.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
@@ -25,52 +26,67 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"
       integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <title>City of Heroes - Enhancements</title>
-    <link rel="stylesheet" type="text/css" href="../codex.css">
     <script language="javascript" type="text/javascript">
-      var images = new Array()
-      var images2 = new Array()
-      var images3 = new Array()
-
-      images[0] = "../images/cov_large.png";
-      images[1] = "../images/coh_gr_large.png";
-      images[2] = "../images/coh_large.png";
-      images2[0] = "../images/city_back_blue.png";
-      images2[1] = "../images/city_back_red.png";
-      images2[2] = "../images/city_back_gr.png";
-      images3[0] = "linear-gradient(#000428, #004e92)";
-      images3[1] = "linear-gradient(#1f1c18, #8e0e00)";
-      images3[2] = "linear-gradient(#333333, #c9ad1c)";
-
-      //     setInterval("changeImage()", 8000);
-      //     setInterval("changeImage2()", 8000);
-      //     setInterval("changeImage3()", 8000);
-
-      var x = 0;
-
-      function changeImage() {
-          document.getElementById("switch").src = images[x]
-          x++;
-          if (images.length == x) {
-              x = 0;
-          }
-      }
-      function changeImage2() {
-          document.getElementById("switch2").style.backgroundImage = "url(" + images2[x] + ")";
-          $("#switch2").fadeIn(1600);
-
-      }
-      function changeImage3() {
-          $('.tools_display').css("background", images3[x]);
-      }
-
-      function force_change() {
-          changeImage();
-          changeImage2();
-          changeImage3();
-      }
-    </script>
-
+        var images = new Array()
+        var images2 = new Array()
+        var images3 = new Array()
+   
+        images[0] = "./images/cov_large.png";
+        images[1] = "./images/coh_gr_large.png";
+        images[2] = "./images/coh_large.png";
+        images2[0] = "./images/city_back_blue.png";
+        images2[1] = "./images/city_back_red.png";
+        images2[2] = "./images/city_back_gr.png";
+        images3[0] = "linear-gradient(#000428, #004e92)";
+        images3[1] = "linear-gradient(#1f1c18, #8e0e00)";
+        images3[2] = "linear-gradient(#333333, #c9ad1c)";
+   
+   //     setInterval("changeImage()", 8000);
+   //     setInterval("changeImage2()", 8000);
+   //     setInterval("changeImage3()", 8000);
+   
+        var x = 0
+     
+   
+          function changeImage()
+        {
+                   document.getElementById("switch").src=images[x]
+                   x++;
+       if (images.length == x) 
+                   {
+                       x = 0;
+                   }
+        }
+     function changeImage2()
+        {   
+       document.getElementById("switch2").style.backgroundImage = "url("+images2[x]+")";
+       $("#switch2").fadeIn(1600);
+                 
+                 }
+     function changeImage3()
+        {  
+       $('.menu_block').css("background", images3[x]);
+       if ( x == 1 ) 
+                   {
+                       document.getElementById("paragon").src='images/arachnos.png';
+                   }
+       if ( x == 0 ) 
+                   {
+                       document.getElementById("paragon").src='images/statesman.png';
+                   }
+       if ( x == 2 ) 
+                   {
+                       document.getElementById("paragon").src='images/Praetoria_Icon_Web.png';	 
+                   }
+        }
+   </script>
+    <script>
+   function force_change() {
+     changeImage();
+     changeImage2();
+     changeImage3();
+   }
+   </script>
     <script>
     $(document).ready(function() {
     $(".enhance_display").click(function () {
@@ -95,7 +111,7 @@
       </ul>
     </div>
     <div class="training">
-      <br/>
+      <br />
       <div class="sub_header_enhance">Types</div>
 
       <div class="enhance_body_display">
