--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -99,7 +99,7 @@ function force_change() {
   </head>
 
   <body id="switch2">
-    <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256 switch"></div>
+    <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
     <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
 
     <hr />
