--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -102,7 +102,7 @@ function force_change() {
     <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
     <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
     <hr />
-    <div class="page_header" onclick="location.reload();">Enhancements</div>
+    <div class="page_header" onclick="location.reload();">Training/DO/SO<br/>Enhancements</div>
     <hr />
     <div class="sub_header_enhance">Shopping List</div>
     <div class="list_container">
