--- a/enhancements/index.html
+++ b/enhancements/index.html
@@ -25,6 +25,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"
       integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q=="
       crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="../enhancements/enhance.js"></script>
     <script language="javascript" type="text/javascript">
      var images = new Array()
      var images2 = new Array()
@@ -102,7 +103,7 @@ function force_change() {
     <div class="main_title" onclick="force_change();"><img src="../images/coh_large.png" width="256" height="256" id="switch"></div>
     <div class="sub_title"><img src="../images/codex.png" width="200" height="45"></div>
     <hr />
-    <div class="page_header" onclick="location.reload();">Training/DO/SO<br/>Enhancements</div>
+    <div class="page_header" onclick="location.reload();">Training/DO/SO<br />Enhancements</div>
     <hr />
     <div class="sub_header_enhance">Shopping List</div>
     <div class="list_container">
