--- a/comics/index.html
+++ b/comics/index.html
@@ -18,6 +18,8 @@
     <link rel="icon" sizes="192x192" href="../images/icons/icon-192x192.png">
     <link rel="icon" sizes="384x384" href="../images/icons/icon-384x384.png">
     <link rel="icon" sizes="512x512" href="../images/icons/icon-512x512.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../codex.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
