--- a/story_bible/index.html
+++ b/story_bible/index.html
@@ -99,7 +99,7 @@ function force_change() {
 
       <div class="sb_display" onclick="window.open('./Heroes/freedom_corps.pdf','_blank')">
         <div class="sub_menu"><img src="../images/statesman.png" class="display_box_sb"></div>
-        <div class="sub_menu_text_sb">Freedom<br />Corps</div>
+        <div class="sub_menu_text_sb">Freedom Corps</div>
       </div>
     </div>
 
