--- a/manuals/index.html
+++ b/manuals/index.html
@@ -8,7 +8,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta http-equiv="Cache-control" content="NO-STORE">
     <meta name="robots" content="noindex, nofollow">
-    <meta name="mobile-web-app-capable" content="yes">
+    <title>City of Heroes - Codex</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="icon" sizes="72x72" href="../images/icons/icon-72x72.png">
     <link rel="icon" sizes="96x96" href="../images/icons/icon-96x96.png">
     <link rel="icon" sizes="128x128" href="../images/icons/icon-128x128.png">
@@ -19,7 +20,7 @@
     <link rel="icon" sizes="512x512" href="../images/icons/icon-512x512.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../codex.css">
+    <link rel="stylesheet" type="text/css" href="../css/codex.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
       integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
